# AI-validator

./: .gitignore  main.py  pyproject.toml  requirements.txt  test_chunking.py  test_embedding.py  test_load.py  test_pinecone.py  test_rag.py  test_retrieve.py  test_score.py
data/knowledge_base/: project_cases.json  startup_cases.json
src/: config.py  llm_service.py  main.py  models.py  rag_pipeline.py  scoring_engine.py
